--- a/src/app/shared/login-modal/login-modal.component.scss
+++ b/src/app/shared/login-modal/login-modal.component.scss
@@ -1,5 +1,6 @@
 .modal-custom-small {
     max-width: 400px !important;
+  margin : 0 auto;
   }
   label{
     font-size: 12px !important;
